--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,9 +10,10 @@ services:
       - DISCORD_TOKEN=${DISCORD_TOKEN}
       - SPOTIFY_CLIENT_ID=${SPOTIFY_CLIENT_ID}
       - SPOTIFY_CLIENT_SECRET=${SPOTIFY_CLIENT_SECRET}
+      - DISCOGS_TOKEN=${DISCOGS_TOKEN}
       - DATABASE_PATH=/app/data/musicbot.db
       - WEB_HOST=0.0.0.0
-      - WEB_PORT=8080
+      - WEB_PORT=${WEB_PORT:-8080}
       # Optional: YouTube cookies
       # - YTDL_COOKIES_PATH=/app/data/cookies.txt
       # - YTDL_PO_TOKEN=${YTDL_PO_TOKEN}
