Update Discogs auth to use Consumer Key and Secret

--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,8 @@ SPOTIFY_CLIENT_ID=
 SPOTIFY_CLIENT_SECRET=
 
 # --- Discogs API (Primary Metadata Fallback) ---
-DISCOGS_TOKEN=
+DISCOGS_KEY=
+DISCOGS_SECRET=
 
 # --- Web Dashboard ---
 WEB_HOST=127.0.0.1
