--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,8 @@ services:
       - DISCORD_TOKEN=${DISCORD_TOKEN}
       - SPOTIFY_CLIENT_ID=${SPOTIFY_CLIENT_ID}
       - SPOTIFY_CLIENT_SECRET=${SPOTIFY_CLIENT_SECRET}
-      - DISCOGS_TOKEN=${DISCOGS_TOKEN}
+      - DISCOGS_KEY=${DISCOGS_KEY}
+      - DISCOGS_SECRET=${DISCOGS_SECRET}
       - DATABASE_PATH=/app/data/musicbot.db
       - WEB_HOST=0.0.0.0
       - WEB_PORT=${WEB_PORT:-8080}
